Upgrade to Java 13 (with preview features)